  * Bump kde-sc-dev-latest build dependency to 4:4.7.1.
  * Bump kdelibs5-dev build dependency to 4:4.7.
  * Bump kdepimlibs5-dev build dependency to 4:4.7.
  * Update patches:
    - Import plasma_desktop_shell_drop_kactivities.diff from Ubuntu.
    - Remove backport_kwin_multihead_improvements.diff, applied usptream.
    - Remove ksmserver_fadeeffect_use_sse2_free.diff, applied upstream.
    - Refreshed various patches to make them apply without offsets.
  * Update build dependencies:
    - Add libgles2-mesa-dev.
    - Add libprison-dev.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 11 Aug 2011 19:17:29 +0200

kdebase-workspace (4:4.6.5-3) unstable; urgency=low

  [ Pino Toscano ]
  * Disable the NetworkManager-related files, as they are not compiled with
    NM >= 0.9. (Closes: #640393)
  * Bump the libnm-util-dev and network-manager-dev build dependencies to 0.9,
    to be sure to not use an older NM version.

  [ José Manuel Santamaría Lema ]
  * Add kwin_avoid_deep_vector_copies.diff to improve kwin performance.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 15 Sep 2011 23:02:00 +0200

kdebase-workspace (4:4.6.5-2) unstable; urgency=low

  [ Pino Toscano ]
  * plasma-scriptengine-googlegadgets: do not depend anymore on
    google-gadgets-xul: the next google-gadget revision will not provide it
    anymore, while just google-gagets-qt will have the needed modules.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 26 Jul 2011 21:44:42 +0300

kdebase-workspace (4:4.6.5-1) unstable; urgency=low

  * New upstream release:
    - fixes bashishm in krandrstartup (Closes: #630015)

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.5.
  * Update symbols files.
  * Drop kdebase-workspace-dbg and -dev lintian overrides files, no longer
    needed.

  [ Modestas Vainius ]
  * Follow python-kde4 4:4.6.80 and switch plasma-scriptengine-python from