@@ -10,6 +10,7 @@ kdebase-workspace (4:4.7.1-0r0) UNRELEASED; urgency=low
     - Import plasma_desktop_shell_drop_kactivities.diff from Ubuntu.
     - Remove backport_kwin_multihead_improvements.diff, applied usptream.
     - Remove ksmserver_fadeeffect_use_sse2_free.diff, applied upstream.
+    - Update kwin_avoid_deep_vector_copies.diff from upstream's git.
     - Refreshed various patches to make them apply without offsets.
   * Update build dependencies:
     - Add libgles2-mesa-dev.
